--- a/src/app/view/maismix/maismix.component.css
+++ b/src/app/view/maismix/maismix.component.css
@@ -2,6 +2,7 @@
   padding-top: 40px;
 }
 
+
 .title {
   display: flex;
   justify-content: center;
@@ -15,12 +16,15 @@
   width: 350px;
   height: 500px;
   overflow: hidden;
+  border: 10px rgb(46, 46, 46) solid;
+  border-radius: 20px;
 }
 
 .slides {
   width: 400%;
   height: 500px;
   display: flex;
+  
 }
 
 .slides input {
@@ -34,18 +38,19 @@
 
 .slide img {
   width: 350px;
+  height: 500px;
 }
 
 .manual-navigation {
   position: absolute;
   width: 350px;
-  margin-top: 5px;
+  margin-top: 20px;
   display: flex;
   justify-content: center;
 }
 
 .manual-btn {
-  border: 2px solid #fff;
+  border: 2px solid #000000;
   padding: 5px;
   border-radius: 10px;
   cursor: pointer;
@@ -56,19 +61,38 @@
   margin-right: 40px;
 }
 .manual-btn:hover {
-  background-color: white;
+  background-color: rgb(71, 71, 71);
 }
 #radio1:checked ~ .first {
   margin-left: 0;
+  transition: 0.5s;
 }
 #radio2:checked ~ .first {
   margin-left: -25%;
+  transition: 0.5s;
 }
 
 #radio3:checked ~ .first {
   margin-left: -50%;
+  transition: 0.5s;
 }
 
 #radio4:checked ~ .first {
   margin-left: -75%;
+  transition: 0.5s;
+}
+
+.text-field{
+  padding-top: 80px;
+  text-align: left;
+  color: white;
+  display: flex;
+  justify-content:center;
+  width: 100%;
+  font-size: 18px;
+  line-height: 120%;
+}
+
+.teste2{
+  width: 50%;
 }
