--- a/src/app/view/maismix/maismix.component.html
+++ b/src/app/view/maismix/maismix.component.html
@@ -5,33 +5,49 @@
     <p>MaisMix</p>
   </div>
 
-  <div class="slider">
-    <div class="slides">
-      <input type="radio" name="radio-btn" id="radio1" />
-      <input type="radio" name="radio-btn" id="radio2" />
-      <input type="radio" name="radio-btn" id="radio3" />
-      <input type="radio" name="radio-btn" id="radio4" />
+  <div class="teste">
+    <div class="slider">
+      <div class="slides">
+        <input type="radio" name="radio-btn" id="radio1" />
+        <input type="radio" name="radio-btn" id="radio2" />
+        <input type="radio" name="radio-btn" id="radio3" />
+        <input type="radio" name="radio-btn" id="radio4" />
 
-      <div class="slide first">
-        <img src="assets/maismix_tela.png" alt="Imagem 1" />
-      </div>
-      <div class="slide">
-        <img src="assets/maismix2.png" alt="Imagem 2" />
-      </div>
-      <div class="slide">
-        <img src="assets/maismix3.png" alt="Imagem 3" />
-      </div>
-      <div class="slide">
-        <img src="assets/maismix4.png" alt="Imagem 4" />
+        <div class="slide first">
+          <img src="assets/maismix_tela.png" alt="Imagem 1" />
+        </div>
+        <div class="slide">
+          <img src="assets/maismix2.png" alt="Imagem 2" />
+        </div>
+        <div class="slide">
+          <img src="assets/maismix3.png" alt="Imagem 3" />
+        </div>
+        <div class="slide">
+          <img src="assets/maismix4.png" alt="Imagem 4" />
 
-       
+
+        </div>
+      </div>
+      <div class="manual-navigation">
+        <label for="radio1" class="manual-btn"></label>
+        <label for="radio2" class="manual-btn"></label>
+        <label for="radio3" class="manual-btn"></label>
+        <label for="radio4" class="manual-btn"></label>
       </div>
     </div>
-    <div class="manual-navigation">
-      <label for="radio1" class="manual-btn"></label>
-      <label for="radio2" class="manual-btn"></label>
-      <label for="radio3" class="manual-btn"></label>
-      <label for="radio4" class="manual-btn"></label>
+
+    <div class="text-field">
+      <div class="teste2">
+
+        <p>
+          WebApp desenvolvido para a concretaria Maismix de sertãozinho. A MaisMix é uma empresa de distribuição de concreto usinado e serviços de bombeamento etc.
+        </p>
+        <p>
+          Eles estavam com problemas logísticos dentro da empresa, tudo era gerenciado via planilha do Excel, por isso, entraram em contato comigo para requisitar um sistema de controle. O objetivo do APP era controlar o horário de entrega e os clientes que estavam comprando concreto. Tudo isso em uma conta única atualizada em tempo real para que os funcionarios de diferentes lugares possam acessar e ter acesso as mesmas informações na hora.
+        </p>
+        <p>O sistema foi desenvolvido utilizando flutter, possibilitando o acesso tanto em iphone quanto em android. Por ser um WebApp ele pode ser acessado tanto no pc quanto no celular. A hospedagem e o banco de dados foram com FireBase e a etapa de prototipação foi realizada com o Figma.</p>
+        
+      </div>
     </div>
   </div>
 </div>
